--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,7 +17,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-image: url('coming-soon.gif'); /* Your GIF must be uploaded and named this */
+      background-image: url('coming-soon.gif'); /* Replace with actual GitHub-hosted GIF path */
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
