--- a/index.html
+++ b/index.html
@@ -1,73 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Marfooah | Coming Soon</title>
+  <meta charset="UTF-8">
+  <title>Marfooah — Coming Soon</title>
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      background-color: #000;
-      font-family: 'Playfair Display', serif;
-      color: white;
+      background-color: #121212;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-image: url('coming-soon.gif'); /* Replace with actual GitHub-hosted GIF path */
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-      text-align: center;
+      margin: 0;
+      flex-direction: column;
     }
-
-    .overlay {
-      background-color: rgba(0, 0, 0, 0.6);
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      z-index: 1;
+    img {
+      width: 80%;
+      max-width: 600px;
     }
-
-    .content {
-      position: relative;
-      z-index: 2;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-
     p {
-      font-size: 1.2rem;
-      margin-top: 0;
-      opacity: 0.9;
-    }
-
-    @media screen and (max-width: 600px) {
-      h1 {
-        font-size: 2rem;
-      }
-
-      p {
-        font-size: 1rem;
-      }
+      color: #F5EEDC;
+      font-family: 'Georgia', serif;
+      margin-top: 20px;
+      font-size: 18px;
     }
   </style>
 </head>
 <body>
-  <div class="overlay"></div>
-  <div class="content">
-    <h1>Marfooah</h1>
-    <p>A Divine Tech Revolution is Rising</p>
-    <p>Launching Soon • marfooah.com</p>
-    <p>@marfooah</p>
-  </div>
+  <img src="marfooah.gif" alt="Coming Soon">
+  <p>Follow @marfooah • A divine tech revolution is rising</p>
 </body>
 </html>
