--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </head>
 <body>
   <img src="marfooah.gif" alt="Coming Soon">
-  <p>Follow @marfooah • A divine tech revolution is rising</p>
+  <p> <p> Launching soon • marfooah.com
+  Follow @marfooah.ai </p>
 </body>
 </html>
