--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 </head>
 <body>
   <img src="marfooah.gif" alt="Coming Soon">
-  <p> <p> Launching soon • marfooah.com
-  Follow @marfooah.ai </p>
+  <p> <p> Launching soon • marfooah.com </p>
 </body>
 </html>
