--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Marfooah — Coming Soon</title>
   <style>
     body {
-      background-color: #121212;
+      background-color: #27332f;
       display: flex;
       justify-content: center;
       align-items: center;
