--- a/index.html
+++ b/index.html
@@ -1,32 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Marfooah — Coming Soon</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Marfooah | A Divine Tech Revolution</title>
   <style>
+    /* 🌙 Base Styles */
     body {
-      background-color: #27332f;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       margin: 0;
+      padding: 2rem;
+      background-color: #1D1A1A; /* replace if you want your GIF bg */
+      color: #ffffff;
+      font-family: 'Playfair Display', serif;
+      display: flex;
       flex-direction: column;
+      align-items: center;
+      justify-content: start;
+      min-height: 100vh;
+      text-align: center;
     }
-    img {
-      width: 80%;
-      max-width: 600px;
+
+    /* ✨ Scroll Animation */
+    .fade-in {
+      opacity: 0;
+      transform: translateY(30px);
+      transition: opacity 1.5s ease-out, transform 1.5s ease-out;
     }
-    p {
-      color: #F5EEDC;
-      font-family: 'Georgia', serif;
-      margin-top: 20px;
-      font-size: 18px;
+
+    .fade-in.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    /* 🌟 Shimmer Effect */
+    .shimmer {
+      background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.15) 50%, rgba(255,255,255,0) 100%);
+      background-size: 200% 100%;
+      animation: shimmer 2.5s infinite linear;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      display: inline-block;
+    }
+
+    @keyframes shimmer {
+      0% {
+        background-position: -100% 0;
+      }
+      100% {
+        background-position: 100% 0;
+      }
+    }
+
+    /* 🔠 Text Styling */
+    .tagline {
+      font-size: 1.3rem;
+      margin-top: 1rem;
+      font-style: italic;
+      opacity: 0.8;
+    }
+
+    .quran {
+      font-size: 1rem;
+      margin-top: 2.5rem;
+      color: #d9d1bc;
+      line-height: 1.7;
+      max-width: 90%;
+    }
+
+    .secure {
+      margin-top: 2.5rem;
+      font-size: 0.85rem;
+      color: #888;
+      font-style: italic;
+    }
+
+    .logo {
+      max-width: 90%;
+      height: auto;
     }
   </style>
 </head>
 <body>
-  <img src="marfooah.gif" alt="Coming Soon">
-  <p> <p> Launching soon • marfooah.com </p>
+  <div class="fade-in">
+    <img src="marfooah.gif" alt="Marfooah Coming Soon" class="logo" />
+  </div>
+
+  <div class="fade-in tagline shimmer">A divine tech revolution is rising...</div>
+
+  <div class="fade-in quran">
+    <strong>Allah has promised</strong> those of you who believe and do good that <strong>He will certainly make them successors in the land</strong> as He did with those before them;<br><br>
+    and <strong>will surely establish for them</strong> their faith which He has chosen for them; and <strong>will change</strong>, their fear into security—<br><br>
+    <em>“ provided rhat they worship Me, associating nothing with Me.”</em>  
+    <br><br>
+    <em>— Surah An-Nur (24:55)</em>
+  </div>
+
+  <div class="fade-in secure">(Secure site launching soon...)</div>
+
+  <!-- ⚙️ JavaScript for Scroll Observer -->
+  <script>
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('visible');
+        }
+      });
+    });
+
+    document.querySelectorAll('.fade-in').forEach((el) => {
+      observer.observe(el);
+    });
+  </script>
 </body>
 </html>
