--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
   <div class="fade-in quran">
     <strong>Allah has promised</strong> those of you who believe and do good that <strong>He will certainly make them successors in the land</strong> as He did with those before them;<br><br>
     and <strong>will surely establish for them</strong> their faith which He has chosen for them; and <strong>will change</strong>, their fear into security—<br><br>
-    <em>“ provided rhat they worship Me, associating nothing with Me.”</em>  
-    <br><br>
+    <em>“ ˹provided that˺ they worship Me, associating nothing with Me.”</em>  
+    <br><br> <strong>But whoever disbelieves after this ˹promise˺, it is they who will be the rebellious.</strong><br><br>
     <em>— Surah An-Nur (24:55)</em>
   </div>
 
