--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       padding: 2rem;
-      background-color: #1D1A1A; /* replace if you want your GIF bg */
+      background-color: #27332F; /* replace if you want your GIF bg */
       color: #ffffff;
       font-family: 'Playfair Display', serif;
       display: flex;
@@ -19,6 +19,10 @@
       min-height: 100vh;
       text-align: center;
     }
+.quran::before {
+  content: "🌙 ";
+  font-size: 1.2rem;
+}
 
     /* ✨ Scroll Animation */
     .fade-in {
@@ -58,11 +62,14 @@
       font-style: italic;
       opacity: 0.8;
     }
+    body {
+    padding-bottom: 300px;
+    }
 
     .quran {
       font-size: 1rem;
       margin-top: 2.5rem;
-      color: #d9d1bc;
+      color: #9FA79E;
       line-height: 1.7;
       max-width: 90%;
     }
