--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </head>
 <body>
   <div class="fade-in">
-    <img src="marfooah.gif" alt="Marfooah Coming Soon" class="logo" />
+    <img src="marfooah-coming-soon.gif" alt="Marfooah Coming Soon" class="logo" />
   </div>
 
   <div class="fade-in tagline shimmer">A divine tech revolution is rising...</div>
