--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #F5EEDC; /* YOUR palette bg */
+      background-color:  #27332F; /* YOUR palette bg */
       font-family: 'Playfair Display', serif;
       color: #333333;
     }
@@ -35,7 +35,7 @@
       line-height: 1.8;
       font-style: italic;
       padding: 20px;
-      color: #544541; /* Or another shade from your palette */
+      color: #9FA79E; /* Or another shade from your palette */
     }
 
     .ayah-visible {
@@ -51,18 +51,18 @@
   </style>
 </head>
 <body>
-
-  <div class="main-container">
+   <div class="main-container">
     <img src="marfooah.gif" alt="Marfooah Revolution GIF" class="main-gif" />
-        <div class="fade-in quran">
-    <strong>Allah has promised</strong> those of you who believe and do good that <strong>He will certainly make them successors in the land</strong> as He did with those before them;<br><br>
+    <div class="ayah-container" id="ayah">
+      <p>
+         <strong>Allah has promised</strong> those of you who believe and do good that <strong>He will certainly make them successors in the land</strong> as He did with those before them;<br><br>
     and <strong>will surely establish for them</strong> their faith which He has chosen for them; and <strong>will change</strong>, their fear into security—<br><br>
     <em>“ ˹provided that˺ they worship Me, associating nothing with Me.”</em>  
     <br><br> <strong>But whoever disbelieves after this ˹promise˺, it is they who will be the rebellious.</strong><br><br>
-        <em>— Surah An-Nur 24:55</em>
+    <em>— Surah An-Nur (24:55)</em>
       </p>
     </div>
- 
+  </div>
 
   <script>
     // Ayah scroll animation
