--- a/index.html
+++ b/index.html
@@ -30,6 +30,41 @@
 .fade-line {
   color: #D3BFB4; /* or pick a subtle, clean color from your palette */
 }
+@media (max-width: 768px) {
+  .tagline {
+    font-size: 1.2rem;
+    margin-top: 20px;
+    text-align: center;
+  }
+
+  .ayah-text {
+    font-size: 0.95rem;
+    line-height: 1.7;
+    padding: 0 20px;
+    text-align: center;
+  }
+
+  .intro {
+    font-size: 1.2rem;
+  }
+
+  .fade-line {
+    font-size: 0.95rem;
+  }
+
+  .highlight,
+  .keyword {
+    font-weight: 600;
+  }
+}
+@media (max-width: 768px) {
+  .gif-container img {
+    max-width: 90vw;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
+}
 
     /* Brand tagline below GIF */
     .tagline {
