--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
   font-weight: 600;
 }
 .highlight {
-  color: #A78645; /* rusty gold */
+  color: #D3BFB4; /* rusty gold */
   font-weight: bold;
 }
 .intro {
   font-size: 1.5rem;
-  color: #544541;
+  color: #E8E6E3;
   font-weight: bold;
 }
 
@@ -141,11 +141,11 @@
       line-height: 1.8;
       font-style: italic;
       padding: 20px;
-      color: #544541;
+      color: #9FA79E;
     }
 
     .highlight {
-      color: #A7B9A8;
+      color: #D3BFB4;
       font-weight: bold;
     }
 
@@ -164,7 +164,7 @@
     <img src="marfooah-coming-soon.gif" alt="Marfooah Revolution GIF" class="main-gif" />
 
     <!-- Tagline -->
-    <div class="tagline">A divine tech revolution is rising.</div>
+    <div class="tagline">A divine tech revolution is rising...</div>
 
     <!-- Crescent + Ayah -->
     <div class="ayah-block" id="ayah">
