--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   font-weight: 600;
 }
 .highlight {
-  color: #D3BFB4; /* rusty gold */
+  color: #E8E6E3; /* rusty gold */
   font-weight: bold;
 }
 .intro {
@@ -145,7 +145,7 @@
     }
 
     .highlight {
-      color: #D3BFB4;
+      color: #E8E6E3;
       font-weight: bold;
     }
 
