--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       width: 100%;
       max-width: 800px;
       display: block;
-      margin: 0 auto;
+      margin: 20px 0;
     }
 .fade-line {
   color: #D3BFB4; /* or pick a subtle, clean color from your palette */
