--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       padding: 2rem;
-      background-color: #1D1A1A; /* replace if you want your GIF bg */
+      background-color: #27332F; /* replace if you want your GIF bg */
       color: #ffffff;
       font-family: 'Playfair Display', serif;
       display: flex;
@@ -88,7 +88,7 @@
 </head>
 <body>
   <div class="fade-in">
-    <img src="marfooah.gif" alt="Marfooah Coming Soon" class="logo" />
+    <img src="marfooah-coming-soon.gif" alt="Marfooah Coming Soon" class="logo" />
   </div>
 
   <div class="fade-in tagline shimmer">A divine tech revolution is rising...</div>
