--- a/index.html
+++ b/index.html
@@ -63,8 +63,6 @@
   font-size: 1.2rem;
 }
 
-<div style="height: 200px;"></div>
-
     .quran {
       font-size: 1rem;
       margin-top: 2.5rem;
@@ -94,11 +92,11 @@
   <div class="fade-in tagline shimmer">A divine tech revolution is rising...</div>
 
  <div class="fade-in quran">
-  <strong>Allah has promised</strong> those who have believed among you and done righteous deeds that <strong>He will surely grant them succession</strong> [authority] upon the earth just as He granted it to those before them.<br><br>
-  And that <strong>He will surely establish for them</strong> [therein] their religion which He has preferred for them, and that <strong>He will surely substitute for them</strong>, after their fear, security —<br><br>
-  <em>“They worship Me, not associating anything with Me.”</em><br><br>
-  <strong>But whoever disbelieves after this ˹promise˺—it is they who are the rebellious.</strong><br><br>
-  <em>— Surah An-Nur (24:55)</em>
+ <strong> 🌙 Allah has promised</strong> those of you who believe and do good that <strong>He will certainly make them successors in the land</strong> as He did with those before them;<br><br>
+    and <strong>will surely establish for them</strong> their faith which He has chosen for them; and <strong>will change</strong>, their fear into security—<br><br>
+    <em>“ ˹provided that˺ they worship Me, associating nothing with Me.”</em>  
+    <br><br> <strong>But whoever disbelieves after this ˹promise˺, it is they who will be the rebellious.</strong><br><br>
+    <em>— Surah An-Nur (24:55)</em>
 </div>
 
 
