--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
       min-height: 100vh;
       text-align: center;
     }
+.parallax-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 130vh;
+  background: linear-gradient(to bottom, #27332F, #1e2522);
+  z-index: -1;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transform: translateZ(0);
+}
+
+.content {
+  position: relative;
+  z-index: 10;
+}
 
     /* ✨ Scroll Animation */
     .fade-in {
@@ -85,9 +104,12 @@
   </style>
 </head>
 <body>
-  <div class="fade-in">
-    <img src="marfooah-coming-soon.gif" alt="Marfooah Coming Soon" class="logo" />
-  </div>
+  <div class="parallax-bg"></div>
+
+  <div class="content">
+    <div class="fade-in">
+      <img src="marfooah-coming-soon.gif" alt="Marfooah Coming Soon" class="logo" />
+    </div>
 
   <div class="fade-in tagline shimmer">A divine tech revolution is rising...</div>
 
