--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
       color: #9FA79E;
       line-height: 1.7;
       max-width: 90%;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+
     }
 
     .secure {
@@ -122,7 +126,7 @@
 </div>
 
 
-  <div class="fade-in secure">(Secure site launching soon...)</div>
+  <div class="fade-in secure">( The Ummah’s future is being built — brick by digital brick.)</div>
 
   <!-- ⚙️ JavaScript for Scroll Observer -->
   <script>
